# west-discovery

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  query.py  requirements-test.txt  requirements.txt  scrape.py  test_database_logic.py
.github/workflows/: build-and-deploy.yml  build-and-push.yml
ecs/: task-definition.json
scripts/: build.sh  ingest_data.py
src/stac_fastapi/globus_search/: app.py  config.py  convert.py  core.py  database_logic.py
src/stac_fastapi/globus_search/extensions/aggregration/: __init__.py  aggregration.py  client.py
src/stac_fastapi/globus_search/schemas/:  CMIP6.json  CMIP6.json  CMIP7.json  cmip6.json  obs4MIPs.json
tests/: __init__.py  conftest.py  test_aggregation.py  test_api_endpoints.py  test_config.py  test_convert.py  test_core.py  test_database_logic.py  test_imports_debug.py  test_integration.py
