[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "stac_fastapi.globus_search"
version = "0.0.1"
description = "A Globus Search stac-fastapi frontend demo"
license = "Apache-2.0"
authors = ["Stephen Rosen <sirosen@globus.org>"]
packages = [
  { include = "stac_fastapi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12.0"
attrs = "25.3.0"
globus-sdk = "3.62.0"
pystac-client = "0.7.0"
stac-fastapi.api = "3.0.0a0"
stac-fastapi.core = "3.0.0a1"
stac-fastapi.extensions = "3.0.0a0"
stac-fastapi.types = "3.0.0a0"
uvicorn = "0.35.0"

[tool.poetry.scripts]
stac-fastapi-globus-search = "stac_fastapi.globus_search.app:run"
